--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -11,13 +11,13 @@
 <body>
   <main>
     <div class="header">
-      <img src="/assets/images/icon-star.svg" alt="header-logo"">
+      <img src="/assets/images/icon-star.svg" alt="header-logo">
       <h1>FAQs</h1>
     </div>
     
     <div class="faq-item">
       <div class="inline-wrap">
-          <h3>What is Frontend Mentor, and how will it help me?</h3>
+          <h2>What is Frontend Mentor, and how will it help me?</h2>
           <img src="assets/images/icon-plus.svg" alt="plus-icon" class="toggle-icon">
       </div>
       <p id="answer1" class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
@@ -27,7 +27,7 @@
   <hr>
   <div class="faq-item">
       <div class="inline-wrap">
-          <h3>Is Frontend Mentor free?</h3>
+          <h2>Is Frontend Mentor free?</h2>
           <img src="assets/images/icon-plus.svg" alt="plus-icon" class="toggle-icon">
       </div>
       <p id="answer2" class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
@@ -36,7 +36,7 @@
   <hr>
   <div class="faq-item">
       <div class="inline-wrap">
-          <h3>Can I use Frontend Mentor projects in my portfolio?</h3>
+          <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
           <img src="assets/images/icon-plus.svg" alt="plus-icon" class="toggle-icon">
       </div>
       <p id="answer3" class="answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
@@ -45,7 +45,7 @@
   <hr>
   <div class="faq-item">
       <div class="inline-wrap">
-          <h3>How can I get help if I'm stuck on a Frontend Mentor challenge?</h3>
+          <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
           <img src="assets/images/icon-plus.svg" alt="plus-icon" class="toggle-icon">
       </div>
       <p id="answer4" class="answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
